@@ -1,0 +1,31 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+<html><head></head>
+<body>
+Support for Turkish.
+<p>
+This package contains just the TokenStream for handling turkish casing,
+for a stemmer please see the snowball package. 
+</p>
+<p>
+WARNING: SnowballAnalyzer uses LowerCaseFilter by default, even when the
+language is set to Turkish, so you will need to construct your own
+analyzer that combines TurkishLowerCaseFilter and SnowballFilter.
+</p>
+</body>
+</html>
